--- a/program/02.python/03.机器学习/04.朴素贝叶斯/01.朴素贝叶斯.md
+++ b/program/02.python/03.机器学习/04.朴素贝叶斯/01.朴素贝叶斯.md
@@ -213,10 +213,12 @@ plt.show()
 
 # 参考
 
-1. [Markdown语法和LaTeX数学记号速查手册 ](http://www.domuse.com/markdown-and-latex-equation-handbook.html)
-2. Naive Bayes（朴素贝叶斯）https://blog.csdn.net/syoya1997/article/details/78618885
-3. 贝叶斯推断及其互联网应用（一）：定理简介 http://www.ruanyifeng.com/blog/2011/08/bayesian_inference_part_one.html
-4. 贝叶斯推断及其互联网应用（二）：过滤垃圾邮件 http://www.ruanyifeng.com/blog/2011/08/bayesian_inference_part_two.html
+1. 机器学习实战Peter.2013
+    1. https://github.com/pbharrin/machinelearninginaction.git
+2. [Markdown语法和LaTeX数学记号速查手册 ](http://www.domuse.com/markdown-and-latex-equation-handbook.html)
+3. Naive Bayes（朴素贝叶斯）https://blog.csdn.net/syoya1997/article/details/78618885
+4. 贝叶斯推断及其互联网应用（一）：定理简介 http://www.ruanyifeng.com/blog/2011/08/bayesian_inference_part_one.html
+5. 贝叶斯推断及其互联网应用（二）：过滤垃圾邮件 http://www.ruanyifeng.com/blog/2011/08/bayesian_inference_part_two.html
 Naive Bayes spam filtering
 Bayesian inference
 Bayesian inference
