--- a/manage/02.信息系统项目管理师/11.立项管理.md
+++ b/manage/02.信息系统项目管理师/11.立项管理.md
@@ -10,18 +10,17 @@
         2. 项目的市场预测。
         3. 产品方案或服务的市场预测。
         4. 项目建设必需的条件。
-    4. `项目评估`是银行批准贷款或行政主管部门审批决策的依据。
-    5. 项目建议书主要内容：项目简介、项目建设单位概况、项目建设的必要性、业务分析、总体建设方案、本期项目建设方案
-    6. 本期项目建设方案包括：
-        1. 建设目标与主要建设内容
-        2. 信息资源规划和数据库建设
-        3. 应用支撑平台和应用系统建设
-        4. 网络系统建设
-        5. 数据处理和存储系统建设
-        6. 安全系统建设
-        7. 其他（终端、备份、运维等）系统建设
-        8. 主要软硬件选型原则和软硬件配置清单
-        9. 机房及配套工程建设
+    4. 项目建议书主要内容：项目简介、项目建设单位概况、项目建设的必要性、业务分析、总体建设方案、本期项目建设方案
+        6. `本期项目建设`方案包括：
+            1. 建设目标与主要建设内容
+            2. `信息资源规划和数据库建设`
+            3. 应用支撑平台和应用系统建设
+            4. 网络系统建设
+            5. 数据处理和存储系统建设
+            6. 安全系统建设
+            7. 其他（终端、备份、运维等）系统建设
+            8. 主要软硬件选型原则和软硬件配置清单
+            9. 机房及配套工程建设
 2. 可行性研究的内容
     1. 习题
         1. 项目经理小李依据当前技术发展趋势和所掌握的技术能否支撑该项目的开发，进行可行性研究。小李进行的可行性研究属于（）。 - 信管网 http://www.cnitpm.com/st/35679.html
@@ -62,16 +61,96 @@
         6. 社会可行性。主要分析项目对社会的影响，包括政治体制、方针政策、经济结构、法律道德、宗教民族、妇女儿童及社会稳定性等。
         7. 风险因素及对策。主要对项目的市场风险、技术风险、财务风险、组织风险、法律风险、经济及社会风险等因素进行评价，制定规避风险的对策，为项目全过程的风险管理提供依据。
 3. 详细可行性研究
-    1. 详细可行性研究的结构和内容
+    1. 习题
         1. 某立项负责人编制了一份ERP开发项目的详细可行性研究报告，目录如下：①概述②需求确定③现有资源④技术 - 软题库 https://www.ruantiku.com/shiti/42571466.html
+        2. 详细可行性研究的方法 | 学步园 https://www.xuebuyuan.com/759983.html
+        3. 解析：项目可行性研究阶段的经营成本不包括（）。 - 试题库 - 信管网 https://www.cnitpm.com/pm1/64174.html
     2. 结构和内容
         1. 概述
         2. 项目技术背景与发展概况
         3. 现行系统业务、资源、设施情况分析
         4. 项目技术方案
         5. 实施进度计划
-        6. `投资估算与资金筹措计划`
+        6. `投资、成本估算与资金筹措`
+            1. 总投资费用
+                投资费用就是固定资本与净周转资金的合计，固定资本是建设和装备一个投资项目所需的资金；周转资金（或称流动资金）则相当于全部或部分经营改项目所需的资金；净周转资金则是流动资产减去短期负债。在不同的研究设计阶段，投资估算的精确性不同。
+            2. 资金筹措
+                一般认为自筹、贷款各半稳妥。
+            3. 开发成本
+                开发总成本一般划分为四大类：研发成本、行政管理费、销售与分销费用、财务费用和折旧。前三类成本的总和称为`经营成本`。
+            4. 财务报表，包括以下内容。
+                现金流动表
+                净收入报表
+                预计资产负债表
         7. 人员及培训计划
         8. 不确定性（风险）分析
         9. 经济和社会效益预测与评价
         10. 可行性研究结论与建议
+4. 项目论证
+    1. 习题
+        1. 分析，讨论和验证项目计划和方案，并且给出明确的判断和意见，是项目立项阶段的（）工作中的内容A、项目论 - 软题库 https://www.ruantiku.com/shiti/2123828446.html
+        2. 项目论证是确定项目是否实施的依据，（1）不属于项目建设方项目论证的原则。（2）不属于项目建设方项目论证 - 试题库 - 信管网 https://www.cnitpm.com/pm/12542.html
+        3. 解析：项目论证通过对实施方案的工艺技术、产品、原料、未来的市场需求与供应情况以及项目的投资与收益情况 - 试题库 - 信管网 http://www.cnitpm.com/pm1/35512.html
+    2. 项目论证是指对拟实施项目技术上的先进性、适用性，经济上的合理性、盈利性、实施上的可能性、风险可控性进行全面科学的综合分析，为项目决策提供客观依据的一种技术经济研究活动。项目论证是确定项目是否实施的前提。
+    3. 项目论证的作用主要有： 
+        1. 确定项目是否实施的依据。 
+        2. 筹措资金、向银行贷款的依据。 
+        3. 编制计划、设计、采购、施工以及机构设置、资源配置的依据。 
+        4. 项目论证是防范风险、提高项目效率的重要保证。 
+    3. 项目论证的原则
+        1. 合规。首先，必须明确方案所涉及法律法规、相关规划和评价标准等，如国家经济和社会发展的长远规划，部门与地区规划，经济建设的指导方针、任务、产业政策、投资政策和技术经济政策以及国家和地方法规；经过批准的项目建议书；经由国家批准的资源报告，国土开发整治规划、区域规划和工业基础规划；对于交通运输项目建设要有有关的江河流域规划与路网规划：国家进出口贸易政策和关税政策：当地的拟建厂址的自然、经济、社会等基础资料；有关国家、地区和行业的工程技术、经济方面的法令、法规、标准定额资料：由国家颁布的建设项目可行性研究及经济评价的有关规定：各种市场信息的市场调研报告；等等。 
+        2. 政策、技术、经济相结合。评价方案的技术经济效果，要全面考虑其技术上的先进性、经济上的合理性和政策上的正确性。例如采用先进技术是技术上的一项重要标准，但在一定条件下并非任何先进技术都能发挥最佳的经济效果，因为它要受到对技术的消化能力和授资能力的制约。 
+        所以在对技术方案进行评价时，要统一评价技术的先进性、适用性与经济性，不能片面追求最新技术。 
+        发展国民经济的战略是确定项目决策目标的依据，没有明确的目标，拟订方案就没有依据，决策也就成了盲目的东西。目前造成的重复建设、重复引进以及其他一切失误，都可归结为目标不正确。所以，项目决策必须与国民经济发展的战略相结合，它是实现决策科学化的头等重要的工作，是决策能否做到正确的前提。 
+        3. 重视数据资料。数据资料是项目论证的支柱。项目论证中常依赖假设，但假设的条件多，尤其对基本问题的假设越多，风险就越大，也就失去了项目论证的本来含意和价值。因此必须从组织机构上加强统计数据和情报资料的工作。 
+        由于我国项目论证所需要的数据因缺乏专门机构和专业人员的统计、分析和研究，再加上管理上混乱，导致有的数据资料缺乏真实性，有的内部参考的经济资料又难于得到，至于国际行情更是茫然不清。因此，项目前评估要高度重视数据资料，最大限度地广泛收集各级各类数据资料并在项目论证应用中加以分析，考虑其来源、日期、目的，是什么条件下的数据，以及应用于不同条件下的换算方法等等。 
+        4. 要加强科学的预测工作。管理者的主要责任是决策，对经济和技术的未来发展情况做出准确的预测，无疑就能为我们做出正确的决策提供依据，从而可以避免发生决策失误，少犯错误。所以，对任何决策来说，预测都是一个关键问遥，尤其是对需要大量数据进行分析的项目论证的决策更是如此。所谓预测就是对围绕决策问题的各种内部外部情况所进行的预计，是对尚未发生或目前还不明确的事物所进行的事先估计和推测，是对事物未来将要茬生的结果所进行的探讨和研究。由于系统管理日益重要，预测就成了项目论证与决策的一个重要组成部分和一项重要工具。实际上，对未来的预测，也是我们分析制订项目目标的重要依据。 
+        5. 微观经济效果与宏观经济效果相结合的原则。微观的技术经济效果是从一个项目出发来考察方案的经济效果，宏观的技术经济效果是指从整个国民经济出发来考察方案的经济效果。微观（项目）经济效果是宏观经济效果的基础，而宏观（国家）经济效果是衡量微观经济效果的最终标准，通常两者是相一致的，但在某些情况下也可能发生矛盾。微观经济效果与宏观经济效果相结合的实质，就是要处理好局部利益与整体利益的关系，在项目利益服从国民经济的整体利益的基础上，选择宏观经济效果最佳的项目方案。 
+        6. 近期经济效果与远期经济效粜相结台。近期经济效果与远期经济效果相结合，实质上就是要正确处理当前利益与长远利益之间的关系。通常只育把当前利益与长远利益结合起来，才能保证国民经济的稳定、持续、健康的发展。因此，在评价项目方案删‘，不仅要看近期的经济效果，更要考察长远的经济效果。也就是说要从经济发展上进行动态的考察，要克服在只作静态考察时容易产生的片面性，以避免由于贪图眼前小利而带来无穷后患。 
+        7. 定性分析与定量分析相结合。以定性分析为主的传统的决策方法，是一种在占有一定资料的基础上，根据决策人员的经验、直觉、学识、洞察力和逻辑r推理能力来进行的决策方法，是一种主观性、经验型决策方法。20世纪50年代以后，随着应用数学和计算机科学的发展，在经济决策中引入了更多的定量分析方法，通过定量计算分析，对问题的有关因素进行更糟细的研究，以发现研究对象的实质和规律，使决策更具有科学化的色彩。特别是对决策中出现的不确定因素和风险问题，可以做出更准确的判断与分析，有助于决策者选择。但是经济问题十分复杂，变化很多，有的指标还根本无法用数量表示，采用定量分析的决策方法并不排斥定性分析，甚至可以说，定性分析方法还是必不可少的。
+5. 项目评估
+    1. 习题
+        1. 解析：关于项目评估和项目论证的描述。不正确的是：（）。 A、项目论证应该围绕市场需求、开发技术、财务经 - 试题库 - 信管网 http://www.cnitpm.com/pm1/57258.html
+        2. 项目评估-信息系统项目管理师教程第3版 - 综合知识 - 信管网 http://www.cnitpm.com/pm1/50452.html
+        3. 解析：某系统开发项目邀请第三方进行项目评估，（）不是项目评估的依据。 A、项目建议书及其批准文件 B、项 - 试题库 - 信管网 http://www.cnitpm.com/pm1/50766.html
+    2. 项目评估的含义及其依据
+        1. 项目评估指在项目可行性研究的基础上，`由第三方`（国家、银行或有关机构）根据国家颁布的政策、法规、方法、参数和条例等，从项目（或企业）、国民经济、社会角度出发，对拟建项目建设的必要性、建设条件、生产条件、产品市场需求、工程技术、经济效益和社会效益等进行评价、分析和论证，进而判断其是否可行的一个评估过程。项目评估是项目投资前期进行决策管理的重要环节，其目的是审查项目可行性研究的可靠性、真实性和客观性，为`银行的贷款决策或行政主管部门的审批决策`提供科学依据。`项目评估是由第三方实施`。
+        2. 政府主管部门对某些大型信息化建设项目的项目建议书也要进行评估，其程序和内容与对项目可行性研究的评估基本相同，只是重点对项目建设的必要性进行评估。
+        3. 项目评估的最终成果是项目评估报告。`项目评估`是银行批准贷款或行政主管部门审批决策的依据。
+        4. 项目评估的依据包括如下项目。
+            1. 项目建议书及其批准文件。
+            2. 项目可行性研究报告。
+            3. 报送单位的申请报告及主管部门的初审意见。
+            4. 有关资源、配件、燃料、水、电、交通、通信、资金（包括外汇）等方面的协议文件。
+            5. 必需的其他文件和资料。
+6. 立项管理
+    1. 习题
+        1. 作为承建方，其项目立项的第一步工作是（）。A．编制立项申请书B．项目论证C．项目 - 软题库 https://www.ruantiku.com/shiti/978337.html
+        2. 承建方的立项管理：项目识别，项目论证，投标。 - 综合知识 - 信管网 http://www.cnitpm.com/pm/31495.html
+        3. 解析：承建方的立项管理一般经过（ 项目识别，项目论证，投标，签订合同）等四个阶段 - 试题库 - 信管网 https://www.cnitpm.com/pm/31556.html
+        4. 解析：当与客户签署合同之后，许多供应商会进行内部立项。内部立项的主要作用不包括：（ ）。 A、通过内部 - 试题库 - 信管网 https://www.cnitpm.com/pm1/51398.html
+        5. 项目承建方在投标前一般也需要进行项目论证，主要是从技术可行性、人力及其他资源可行 - 信管网 http://www.cnitpm.com/st/19365.html
+        6. 承建方项目论证的内容 - 综合知识 - 信管网 http://www.cnitpm.com/pm/8688.html
+        7. 承建方的立项管理：项目论证 - 综合知识 - 信管网 http://www.cnitpm.com/pm/13779.html
+        8. 以下关于对承建方及其他资源配置能力进行可行性分析的作用叙述中（）是不正确的a.提 - 信管网 http://www.cnitpm.com/st/19364.html
+    2. 承建方的立项管理
+        1. 承建方的立项管理内容包括：`项目识别，项目论证，投标`。其中，`项目识别`是承建方项目立项的第一步，其目的在于选择投资机会、鉴别投资方向。
+        2. 承建方的立项管理一般经过 项目识别，项目论证，投标，签订合同 等四个阶段 
+        3. 项目承建方在投标前一般也需要进行项目论证，主要是从`技术可行性、人力及其他资源可行性、财务可行性、项目风险分析以及对其他参与竞争投标方情况分析`等方面进行论证。
+        4. 承建方人力及其他资源配置能力可行性分析是否能够充分发挥人和其他资源的潜能，提高企业竞争力。人力资源的合理配置及其主要作用有如下三个方面。
+            1. 人尽其才，才尽其用，使人才充分施展其才华，`提高其生产积极性和创造性`。
+            2. 形成一种`整体合力`，在项目中实现1+1>2的效果。
+            3. `充分激活和放大其他资源`，因为人力资源的激活和放大是其他资源放大和激活的前提，其他资源要通过人力资源的作用才能发挥其潜力，变为现实生产力。
+    3. 系统集成商立项管理
+        1. 系统集成商进行项目内部立项主要有几方面原因。
+            1. 通过项目立项方式为`项目分配资源`，系统集成合同中虽然有明确的合同金额，但合同执行时需要各种资源，所以通过内部立项方式将合同金额转换为资源类型和资源数量的形式。
+            2. 通过项目立项方式确定合理的`项目绩效目标`，有助于提升人员的积极性。组织可能出于战略考虑，甚至会承接那些“亏本”的项目，组织也有可能会借助自身的竞争优势，签署那些“厚利可图”的项目。为了避免将这种商务合同金额的不确定性完全传输给项目开发和实施团队，需要识别项目真实所需的资源类型和资源数量，以真实客观所需的资源成本作为考核项目的重要指标，从而调动人员的积极性。通过项目型的组织方式提升项目的实施效率。
+            3. 以项目型工作方式，提升`项目实施效率`。系统集成供应商针对那些内容复杂、周期较长的系统最好以项目方式组织工作的实施，如果采用单纯的部门合作等工作形式，在工作中可能会出现工作职责不清、相互推诿、消极被动等人员管理和沟通管理方面的问题。
+        2. 系统集成供应商在进行项目内部立项时一般包括的内容有项目资源估算、项目资源分配、准备项目任务书和任命项目经理等。
+7. 信息系统经济效益评价
+    1. 习题
+        1. 信息系统经济效益评价的方法主要有成本效益分析法、（）和价值工程方法。A．净现值法 - 信管网 http://www.cnitpm.com/st/308775465.html
+    2. 信息系统经济效益评价的方法主要有`成本效益分析法、投入产出分析法和价值工程方法`。
+        1. 成本效益分析法即用一定的价格分析测算系统的效益和成本，从而计算系统的净收益，以判断该系统在经济上的合理性。
+        2. 投入产出法主要采用投入产出表。根据系统的实际资源分配和流向，列出系统的所有投入和产出，并制成二维表的形式。
+        3. 价值工程法的基本方程式可以简单表述为：一种产品的价值（V）等于其功能（F）与成本（C）之比。
