--- a/program/02.python/03.机器学习/06.支持向量机SVM/6.3SMO高效优化算法.md
+++ b/program/02.python/03.机器学习/06.支持向量机SVM/6.3SMO高效优化算法.md
@@ -62,3 +62,8 @@ def smoSimple(dataMatIn, classLabels, C, toler, maxIter):
 
 1. 机器学习实战.Peter.2013
     1. https://github.com/pbharrin/machinelearninginaction.git
+2. svm原理详细推导 https://blog.csdn.net/weixin_42001089/article/details/83276714
+3. SVM SMO算法代码详细剖析 https://blog.csdn.net/weixin_42001089/article/details/83420109
+4. 支持向量机—SMO算法源码分析 https://blog.csdn.net/lilong117194/article/details/78238841
+5. 情感分析之电影评论分析-基于Tensorflow的LSTM https://blog.csdn.net/lilong117194/article/details/82217271#comments
+6. 机器学习——支持向量机(SVM)之拉格朗日乘子法，KKT条件以及简化版SMO算法分析 - tonglin0325 - 博客园 https://www.cnblogs.com/tonglin0325/p/6078439.html
