--- a/manage/02.信息系统项目管理师/11.立项管理.md
+++ b/manage/02.信息系统项目管理师/11.立项管理.md
@@ -3,9 +3,12 @@
         1. 解析：项目建议书中不包含（）。 - 试题库 - 信管网 http://www.cnitpm.com/pm1/64173.html
         2. 关于项目建议书的描述，不正确的是：（）。 - 软题库 https://www.ruantiku.com/shiti/394631670.html
         3. 解析：在信息系统集成项目建议书中，“信息资源规划和数据库建设”属于（）部分。 A、业务分析 B、本期项 - 试题库 - 信管网 https://www.cnitpm.com/pm1/58302.html
+        4. 立项申请书是项目建设单位向上级主管部门申请项目时所必须的文件，其核心内容包括（） - 信管网 https://www.cnitpm.com/st/19363.html
+        5. 某工程人员在项目建议书中提到该项目符合国家产业政策和投资方向，符合地方计划发展规划。这部分内容对（） - 信管网 http://www.cnitpm.com/st/12592.html
+        6. 解析： 以下关于项目建议书的叙述中，不正确的是：（ ） A、项目建议书一般由项目承建单位编写，提交项目 - 试题库 - 信管网 https://www.cnitpm.com/pm1/51394.html
     2. 项目建议书概念
         1. 项目建议书（又称立项申请）是项目建设单位向上级主管部门提交项目申请时所必须的文件，是该项目建设建单位或项目法人，根据国民经济的发展、国家和地方中长期规划、产业政策、生产力布局、国内外市场、所在地的内外部条件、本单位的发展战略等等，提出的某一具体项目的建议文件，是对拟建项目提出的框架性的`总体设想`。项目建议书是项目发展周期的初始阶段，是国家或上级主管部门选择项目的依据，也是可行性研究的依据，涉及利用外资的项目，在项目建议书批准后，方可开展对外工作。有些企业单位根据自身发展需要自行决定建设的项目，也参照这一模式首先编制项目建议书。
-    3. 项目建议书内容。项目建议书应该包括的核心内容如下。
+    3. 项目建议书内容。项目建议书应该包括的`核心`内容如下。
         1. 项目的必要性。
         2. 项目的市场预测。
         3. 产品方案或服务的市场预测。
@@ -26,16 +29,23 @@
         1. 项目经理小李依据当前技术发展趋势和所掌握的技术能否支撑该项目的开发，进行可行性研究。小李进行的可行性研究属于（）。 - 信管网 http://www.cnitpm.com/st/35679.html
         2. 解析： 在项目可行性研究内容中，（ ）包括制定合理的项目实施进度计划、设计合理的组织结构、选择经验丰 - 试题库 - 信管网 http://www.cnitpm.com/pm1/51395.html
         3. 解析：在项目可行性研究内容中，（）主要是从资源配置的角度衡量项目的价值，评价项目在实现区域经济发展目 - 试题库 - 信管网 http://www.cnitpm.com/pm1/58303.html
+        4. 解析：信息系统可行性研究包括很多方面的内容，（）中经常会用到敏感性分析。 A、技术可行性分析 B、经济可 - 试题库 - 信管网 http://www.cnitpm.com/pm1/57239.html
+        5. 项目管理课程：可行性研究的内容 - 综合知识 - 信管网 http://www.cnitpm.com/pm/31411.html
+        6. 项目可行性分析是立项前的重要工作，包括技术、物资、资源、人员的可行性，在进行项目可行性分析时，需要在 - 信管网 http://www.cnitpm.com/st/2116815509.html
+        7. 项目立项包括：项目建议、项目可行性分析、项目审批、项目招投标、项目合同谈判5个阶 - 软题库 https://www.ruantiku.com/shiti/2839723018.html
+        8. 项目可行性研究的目的是对拟建设的项目从技术、经济、工程等会方面进行调查研究和分析 - 信管网 http://www.cnitpm.com/st/19362.html
+        9. 项目可行性研究阶段的项目论证和项目评估的关系是（）A、一般先进行项目评估，再进行项目论证B、项目论证 - 软题库 https://www.ruantiku.com/shiti/2117017156.html
+        10. 解析：以下关于项目可行性研究的叙述中，不正确的是：（ ） A、机会可行性研究的目的是激发投资者的兴趣， - 试题库 - 信管网 https://www.cnitpm.com/pm1/51396.html
     2. 可行性研究是一种系统的投资决策的科学分析方法。项目可行性研究是指，在项目投资决策前，通过对项目有关工程技术、经济、社会等方面的条件和情况进行调查、研究和分析，对各种可能的技术方案进行比较论证，并对投资项目建成后的经济效益和社会效益进行预测和分析，以考察项目技术上的先进性和通用性，经济上的合理性和赢利性，以及建设的可能性和可行性，继而确定项目投资建设是否可行的科学分析方法。信息系统项目的可行性研究就是从技术、经济、社会和人员等方面的条件和情况进行调查研究，对可能的技术方案进行论证，以昀终确定整个项目是否可行。
     3. 信息系统项目进行可行性研究包括很多方面的内容，可以归纳成以下几个方面：`技术可行性分析、经济可行性分析、运行环境可行性分析以及其他方面的可行性分析`等。
-        1. 技术可行性分析。技术可行性分析是指在当前市场的技术、产品条件限制下，能否利用现在拥有的以及可能拥有的技术能力、产品功能、人力资源来实现项目的目标、功能、性能，能否在规定的时间期限内完成整个项目。
+        1. 技术可行性分析。技术可行性分析是指在当前市场的技术、产品条件限制下，能否利用现在拥有的以及可能拥有的`技术能力、产品功能、人力资源来实现项目的目标、功能、性能`，能否在规定的时间期限内完成整个项目。
             1. 技术可行性分析一般应当考虑以下因素。
-                1. 进行项目开发的风险。在给定的限制范围和时间期限内，能否设计出预期的系统并实现必须的功能和性能。
-                2. 人力资源的有效性。可以用于项目开发的技术人员队伍是否可以建立，是否存在人力资源不足、技术能力欠缺等问题，是否可以在市场上或者通过培训获得所需要的熟练技术人员。
-                3. 技术能力的可能性。相关技术的发展趋势和当前所掌握的技术是否支持该项目的开发，市场上是否存在支持该技术的开发环境、平台和工具。
-                4. 物资（产品）的可用性。是否存在可以用于建立系统的其他资源，如一些设备以及可行的替代产品等。
+                1. `进行项目开发的风险`。在给定的限制范围和时间期限内，能否设计出预期的系统并实现必须的功能和性能。
+                2. `人力资源的有效性`。可以用于项目开发的技术人员队伍是否可以建立，是否存在人力资源不足、技术能力欠缺等问题，是否可以在市场上或者通过培训获得所需要的熟练技术人员。
+                3. `技术能力的可能性`。相关技术的发展趋势和当前所掌握的技术是否支持该项目的开发，市场上是否存在支持该技术的开发环境、平台和工具。
+                4. `物资（产品）的可用性`。是否存在可以用于建立系统的其他资源，如一些设备以及可行的替代产品等。
             2. 技术可行性分析往往决定了项目的方向，一旦开发人员在评估技术可行性分析时估计错误，将会出现严重的后果，造成项目根本上的失败。
-        2. 经济可行性分析。经济可行性分析主要是对整个项目的投资及所产生的经济效益进行分析，具体包括支出分析、收益分析、投资回报分析以及敏感性分析等。
+        2. 经济可行性分析。经济可行性分析主要是对整个项目的投资及所产生的经济效益进行分析，具体包括支出分析、收益分析、投资回报分析以及`敏感性分析`等。
             1. 支出分析：信息系统项目的支出可以分为一次性支出和非一次性支出两类。
                 1. 一次性支出，包括开发费、培训费、差旅费、初试数据录入、设备购置费等费用。
                 2. 非一次性支出，包括软、硬件租金、人员工资及福利、水电等公用设施使用费，以及其他消耗品支出等。
@@ -44,7 +54,7 @@
                 2. 间接收益，指通过项目实施，通过间接方式获得的收益，如成本的降低。
                 3. 其他收益。
             3. 收益投资比、投资回收期分析：对投入产出进行对比分析，以确定项目的收益率和投资回收期等经济指标。
-            4. 敏感性分析：当诸如设备和软件配置、处理速度要求、系统的工作负荷类型和负荷量等关键性因素变化时，对支出和收益产生影响的估计。
+            4. `敏感性分析`：当诸如设备和软件配置、处理速度要求、系统的工作负荷类型和负荷量等关键性因素变化时，对支出和收益产生影响的估计。
             5. 除了上述的经济方面的分析外，一般还需要对项目的社会效益进行分析。例如，通过项目的实施，可以在管理水平、技术手段、人员素质等方面获得潜在的效益。
         3. 运行环境可行性分析
             1. 信息系统项目的可行性分析不同于一般项目的可行性分析，信息系统项目的产品大多数是一个软件硬件配套的信息系统，或一套需要安装并运行在用户单位的软件、相关说明文档、管理与运行规程。只有硬件运转正常可靠、软件正常使用，并达到预期的技术（功能、性能）指标、经济效益和社会效益指标，才能称为信息系统项目开发是成功的。
@@ -60,6 +70,9 @@
         5. `经济可行性`。主要是从资源配置的角度衡量项目的价值，评价项目在实现区域经济发展目标、有效配置经济资源、增加供应、创造就业、改善环境、提高人民生活等方面的效益。
         6. 社会可行性。主要分析项目对社会的影响，包括政治体制、方针政策、经济结构、法律道德、宗教民族、妇女儿童及社会稳定性等。
         7. 风险因素及对策。主要对项目的市场风险、技术风险、财务风险、组织风险、法律风险、经济及社会风险等因素进行评价，制定规避风险的对策，为项目全过程的风险管理提供依据。
+    5. 项目可行性研究5个阶段包括：机会可行性研究；初步可行性研究；详细可行性研究；项目可行性研究报告的编写、提交和获得批准；`项目评估`。
+    6. 较完整的项目可行性研究的步骤依次是`立项申请、初步可行性研究、详细可行性研究、项目论证、项目评估`
+    7. 先初步可行性研究，小的项目甚至可以直接上马。
 3. 详细可行性研究
     1. 习题
         1. 某立项负责人编制了一份ERP开发项目的详细可行性研究报告，目录如下：①概述②需求确定③现有资源④技术 - 软题库 https://www.ruantiku.com/shiti/42571466.html
@@ -77,7 +90,7 @@
             2. 资金筹措
                 一般认为自筹、贷款各半稳妥。
             3. 开发成本
-                开发总成本一般划分为四大类：研发成本、行政管理费、销售与分销费用、财务费用和折旧。前三类成本的总和称为`经营成本`。
+                开发总成本一般划分为四大类：`研发成本、行政管理费、销售与分销费用`、财务费用和折旧。前三类成本的总和称为`经营成本`。
             4. 财务报表，包括以下内容。
                 现金流动表
                 净收入报表
@@ -91,8 +104,9 @@
         1. 分析，讨论和验证项目计划和方案，并且给出明确的判断和意见，是项目立项阶段的（）工作中的内容A、项目论 - 软题库 https://www.ruantiku.com/shiti/2123828446.html
         2. 项目论证是确定项目是否实施的依据，（1）不属于项目建设方项目论证的原则。（2）不属于项目建设方项目论证 - 试题库 - 信管网 https://www.cnitpm.com/pm/12542.html
         3. 解析：项目论证通过对实施方案的工艺技术、产品、原料、未来的市场需求与供应情况以及项目的投资与收益情况 - 试题库 - 信管网 http://www.cnitpm.com/pm1/35512.html
+        4. "先论证、后决策"是现代项目管理的基本原则，关于建设方的项目论证，下列说法中 - 试题库 - 信管网 https://www.cnitpm.com/pm/9587.html
     2. 项目论证是指对拟实施项目技术上的先进性、适用性，经济上的合理性、盈利性、实施上的可能性、风险可控性进行全面科学的综合分析，为项目决策提供客观依据的一种技术经济研究活动。项目论证是确定项目是否实施的前提。
-    3. 项目论证的作用主要有： 
+    3. `项目论证的作用`主要有： 
         1. 确定项目是否实施的依据。 
         2. 筹措资金、向银行贷款的依据。 
         3. 编制计划、设计、采购、施工以及机构设置、资源配置的依据。 
@@ -108,11 +122,16 @@
         5. 微观经济效果与宏观经济效果相结合的原则。微观的技术经济效果是从一个项目出发来考察方案的经济效果，宏观的技术经济效果是指从整个国民经济出发来考察方案的经济效果。微观（项目）经济效果是宏观经济效果的基础，而宏观（国家）经济效果是衡量微观经济效果的最终标准，通常两者是相一致的，但在某些情况下也可能发生矛盾。微观经济效果与宏观经济效果相结合的实质，就是要处理好局部利益与整体利益的关系，在项目利益服从国民经济的整体利益的基础上，选择宏观经济效果最佳的项目方案。 
         6. 近期经济效果与远期经济效粜相结台。近期经济效果与远期经济效果相结合，实质上就是要正确处理当前利益与长远利益之间的关系。通常只育把当前利益与长远利益结合起来，才能保证国民经济的稳定、持续、健康的发展。因此，在评价项目方案删‘，不仅要看近期的经济效果，更要考察长远的经济效果。也就是说要从经济发展上进行动态的考察，要克服在只作静态考察时容易产生的片面性，以避免由于贪图眼前小利而带来无穷后患。 
         7. 定性分析与定量分析相结合。以定性分析为主的传统的决策方法，是一种在占有一定资料的基础上，根据决策人员的经验、直觉、学识、洞察力和逻辑r推理能力来进行的决策方法，是一种主观性、经验型决策方法。20世纪50年代以后，随着应用数学和计算机科学的发展，在经济决策中引入了更多的定量分析方法，通过定量计算分析，对问题的有关因素进行更糟细的研究，以发现研究对象的实质和规律，使决策更具有科学化的色彩。特别是对决策中出现的不确定因素和风险问题，可以做出更准确的判断与分析，有助于决策者选择。但是经济问题十分复杂，变化很多，有的指标还根本无法用数量表示，采用定量分析的决策方法并不排斥定性分析，甚至可以说，定性分析方法还是必不可少的。
+    4. 项目论证分为两种，即内部论证和外部论证。
+        1. 前者的执行主体为项目承建单位内部没有参加过项目可行性研究的市场专家、财务专家、技术专家，必要时可邀请客户代表或单位外专家参加；
+        2. 后者的执行主体为项目投资者或其委托的第三方权威机构；
+        3. 另外，而且项目论证可以贯穿于可行性研究的整个阶段(此时项目论证可以认为是项目可行性研究的一部分)，也可以在可行性研究完成之后才开始执行 
 5. 项目评估
     1. 习题
         1. 解析：关于项目评估和项目论证的描述。不正确的是：（）。 A、项目论证应该围绕市场需求、开发技术、财务经 - 试题库 - 信管网 http://www.cnitpm.com/pm1/57258.html
         2. 项目评估-信息系统项目管理师教程第3版 - 综合知识 - 信管网 http://www.cnitpm.com/pm1/50452.html
         3. 解析：某系统开发项目邀请第三方进行项目评估，（）不是项目评估的依据。 A、项目建议书及其批准文件 B、项 - 试题库 - 信管网 http://www.cnitpm.com/pm1/50766.html
+        4. 某地方政府策划开展一项大型电子政务建设项目，项目建设方在可行性研究的基础上开展项目评估，以下做法不正 - 信管网 http://www.cnitpm.com/st/1076.html
     2. 项目评估的含义及其依据
         1. 项目评估指在项目可行性研究的基础上，`由第三方`（国家、银行或有关机构）根据国家颁布的政策、法规、方法、参数和条例等，从项目（或企业）、国民经济、社会角度出发，对拟建项目建设的必要性、建设条件、生产条件、产品市场需求、工程技术、经济效益和社会效益等进行评价、分析和论证，进而判断其是否可行的一个评估过程。项目评估是项目投资前期进行决策管理的重要环节，其目的是审查项目可行性研究的可靠性、真实性和客观性，为`银行的贷款决策或行政主管部门的审批决策`提供科学依据。`项目评估是由第三方实施`。
         2. 政府主管部门对某些大型信息化建设项目的项目建议书也要进行评估，其程序和内容与对项目可行性研究的评估基本相同，只是重点对项目建设的必要性进行评估。
@@ -133,6 +152,8 @@
         6. 承建方项目论证的内容 - 综合知识 - 信管网 http://www.cnitpm.com/pm/8688.html
         7. 承建方的立项管理：项目论证 - 综合知识 - 信管网 http://www.cnitpm.com/pm/13779.html
         8. 以下关于对承建方及其他资源配置能力进行可行性分析的作用叙述中（）是不正确的a.提 - 信管网 http://www.cnitpm.com/st/19364.html
+        9. 从政策导向、市场需求、技术发展等寻找项目机会、鉴别投资方向属于立项管理的()工作。A.项目识别B.项 - 信管网 http://www.cnitpm.com/st/33311147.html
+        10. 立项管理是项目管理中的一项重要内容。从项目管理的角度看，立项管理主要是解决项目的（）问题。A．技术可 - 信管网 http://www.cnitpm.com/st/2321618228.html
     2. 承建方的立项管理
         1. 承建方的立项管理内容包括：`项目识别，项目论证，投标`。其中，`项目识别`是承建方项目立项的第一步，其目的在于选择投资机会、鉴别投资方向。
         2. 承建方的立项管理一般经过 项目识别，项目论证，投标，签订合同 等四个阶段 
@@ -147,6 +168,7 @@
             2. 通过项目立项方式确定合理的`项目绩效目标`，有助于提升人员的积极性。组织可能出于战略考虑，甚至会承接那些“亏本”的项目，组织也有可能会借助自身的竞争优势，签署那些“厚利可图”的项目。为了避免将这种商务合同金额的不确定性完全传输给项目开发和实施团队，需要识别项目真实所需的资源类型和资源数量，以真实客观所需的资源成本作为考核项目的重要指标，从而调动人员的积极性。通过项目型的组织方式提升项目的实施效率。
             3. 以项目型工作方式，提升`项目实施效率`。系统集成供应商针对那些内容复杂、周期较长的系统最好以项目方式组织工作的实施，如果采用单纯的部门合作等工作形式，在工作中可能会出现工作职责不清、相互推诿、消极被动等人员管理和沟通管理方面的问题。
         2. 系统集成供应商在进行项目内部立项时一般包括的内容有项目资源估算、项目资源分配、准备项目任务书和任命项目经理等。
+    4. 项目立项管理关注的重点在于是否需要启动一个项目，并为其提供相应的预算支持。所以立项管理主要是解决项目的`组织战略符合性`，看这个项目是否有必要做。
 7. 信息系统经济效益评价
     1. 习题
         1. 信息系统经济效益评价的方法主要有成本效益分析法、（）和价值工程方法。A．净现值法 - 信管网 http://www.cnitpm.com/st/308775465.html
@@ -154,3 +176,15 @@
         1. 成本效益分析法即用一定的价格分析测算系统的效益和成本，从而计算系统的净收益，以判断该系统在经济上的合理性。
         2. 投入产出法主要采用投入产出表。根据系统的实际资源分配和流向，列出系统的所有投入和产出，并制成二维表的形式。
         3. 价值工程法的基本方程式可以简单表述为：一种产品的价值（V）等于其功能（F）与成本（C）之比。
+8. 招投标
+    1. 习题
+        1. 解析：以下关于项目招投标的叙述中，正确的是：（ ） A、资格预审文件或招标文件的发售期不得少于15日 B、 - 试题库 - 信管网 https://www.cnitpm.com/pm1/51397.html
+    2. 评标委员会由招标人的代表和有关技术、经济等方面的专家组成，成员人数为五人以上单数，其中技术、经济等方面的专家不得少于成员总数的三分之二。
+9. 项目可行性报告
+    1. 习题
+        1. 2014上高项真题解析：某信息系统项目最终完成的可行性研究报告的主要内容包括以下部分 - 试题库 - 信管网 http://www.cnitpm.com/pm/11057.html
+10. 辅助（功能）研究
+    1. 习题
+        1. 辅助（功能）研究是项目可行性研究中的一项重要内容。以下叙述中，正确的是（）。 a、辅助（功能）研究只包括项目的某一方面，而不是项目的所有方面 - 软题库 https://www.ruantiku.com/shiti/325714596.html
+        2. 辅助（功能）研究 - 综合知识 - 信管网 http://www.cnitpm.com/pm1/45914.html
+    2. 辅助（功能）研究包括项目的一个或几个方面，但不是所有方面，并且只能作为初步可行性研究、项目可行性研究和大规模投资建议的前提或辅助。
