--- a/program/02.python/01.python基础/18.Django/18.4创建其他网页.md
+++ b/program/02.python/01.python基础/18.Django/18.4创建其他网页.md
@@ -1,4 +1,27 @@
 
+# 0. 目录
+
+1. 模板继承
+    1. 父模板
+        模板标签，{% %}，命名空间，URL模式，锚标签，块标签
+    2. 子模板
+        {% extends %}, {% block %}
+2. 显示所有主题的页面
+    1. URL模式
+        urls.py, urlpatterns, 
+    2. 视图
+        topics(), Topic.objects.order_by('date_added'), 上下文，render()
+    3. 模板
+        topics.html, 接受字典context, {% extends %}, 遍历字典context中的列表topics, {% endfor %}, {{ topic }}, {% empty %}
+3. 显示特定主题的页面
+    1. URL模式
+        urls.py, r'^topics/(?P<topic_id>\d+)/$', 
+    2. 视图
+        topic(), Topic.objects.get(id=topic_id), topic.entry_set.order_by('-date_added'), 减号
+    3. 模板
+        topic.html, {{ topic }}, {% extends %}, {{ entry.date_added|date:'M d, Y H:i' }}, {{ entry.text|linebreaks }}
+    4. 将显示所有主题的页面中的每个主题都设置为链接
+
 
 # 18.4.1 模板继承
 
