--- a/program/02.python/01.python基础/18.Django/18.3.创建网页.md
+++ b/program/02.python/01.python基础/18.Django/18.3.创建网页.md
@@ -1,13 +1,11 @@
 # 0. 目录
 
 1. 映射url
-urls.py, urlpatterns, 包含其他应用的urls, url()函数的三个参数, 正则表达式, 
-
+    urls.py, urlpatterns, 包含其他应用的urls, url()函数的三个参数, 正则表达式, 脱字符`^`, 美元符号`$`
 2. 编写视图
-视图的定义，views.py, render()函数的两个参数
-
+    视图的定义，views.py, render()函数的两个参数
 3. 编写模板
-模板的定义，templates, 
+    模板的定义，templates, 
 
 ## 1. 定义learning_log的URL模式
 
