--- a/program/02.python/01.python基础/18.Django/18.3.创建网页.md
+++ b/program/02.python/01.python基础/18.Django/18.3.创建网页.md
@@ -52,6 +52,7 @@ URL请求刚才定义的模式匹配时，Django将在文件views.py中查找函
 from __future__ import unicode_literals
 
 from django.shortcuts import render
+def index(request):
     """学习笔记的主页"""
     return render(request, 'learning_logs/index.html')
 ```
