--- a/program/02.python/01.python基础/18.Django/18.2.创建应用.md
+++ b/program/02.python/01.python基础/18.Django/18.2.创建应用.md
@@ -11,7 +11,7 @@
         3. 让Django迁移项目, migrate
     3. Django管理网站
         1. 创建超级用户, createsuperuser
-        2. 向管理网站注册模型, admin.py, admin.site.register(Topic), runserver
+        2. 向管理网站注册模型, 让Django通过管理网站管理我们的模型, admin.py, admin.site.register(Topic), runserver
         3. 添加主题
     4. 定义模型Entry
         1. ForeignKey, 外键
