--- a/program/08.架构/02.中台/1.阿里架构总监一次讲透中台架构.md
+++ b/program/08.架构/02.中台/1.阿里架构总监一次讲透中台架构.md
@@ -162,30 +162,18 @@
 
 本文要点小结
 
-1，阿里业务中台架构图。阿里完整前后中台技术架构图。
-
-2，业务中台化-产品形态。将商业基础形态和逻辑梳理出来，解构成业务“积木块”。
-
-3，业务中台化-全局架构。建立中台的中心化控制单元，对中台有一个纵观全局的视图。
-
-4，业务中台化 - 业务创新和智能化。业务中台化，汇集和沉淀业务逻辑和数据，对快速创新提供支持。
-
-5，阿里核心业务架构。小前台、大中台、轻后台的相互支撑体系。
-
-6，阿里数据中台架构。数据中台建设理论、方法和实践。
-
-7，阿里技术全栈全景图。阿里的移动中台、业务中台、数据中台、技术中台。
-
-8，阿里技术平台底座。阿里多年技术积累和沉淀，构建在阿里云之上。
-
-9，阿里中台组织架构。阿里的中台战略，相匹配的组织架构升级。
-
-10，业务中台建设路径。企业中台建设应遵循的3个步骤：决心变革、成功试点、持续融合。
-
-11，企业中台战略4个升级。从战略、组织、流程、技术四个方面进行升级。
-
-12，阿里中台的能力开放。基于阿里云、ET大脑、业务&数据双中台的能力开放。
-
-13，阿里业务中台建设方法论。中台建设和基础协议、中心化操控单元。
+1. 阿里业务中台架构图。阿里完整前后中台技术架构图。
+2. 业务中台化-产品形态。将商业基础形态和逻辑梳理出来，解构成业务“积木块”。
+3. 业务中台化-全局架构。建立中台的中心化控制单元，对中台有一个纵观全局的视图。
+4. 业务中台化 - 业务创新和智能化。业务中台化，汇集和沉淀业务逻辑和数据，对快速创新提供支持。
+5. 阿里核心业务架构。小前台、大中台、轻后台的相互支撑体系。
+6. 阿里数据中台架构。数据中台建设理论、方法和实践。
+7. 阿里技术全栈全景图。阿里的移动中台、业务中台、数据中台、技术中台。
+8. 阿里技术平台底座。阿里多年技术积累和沉淀，构建在阿里云之上。
+9. 阿里中台组织架构。阿里的中台战略，相匹配的组织架构升级。
+10. 业务中台建设路径。企业中台建设应遵循的3个步骤：决心变革、成功试点、持续融合。
+11. 企业中台战略4个升级。从战略、组织、流程、技术四个方面进行升级。
+12. 阿里中台的能力开放。基于阿里云、ET大脑、业务&数据双中台的能力开放。
+13. 阿里业务中台建设方法论。中台建设和基础协议、中心化操控单元。
 
 本文由技术领导力（ID:jishulingdaoli）发布，授权互联网早读课转载。内容仅代表作者独立观点，不代表早读课立场。如需转载，请联系原作者。
