--- a/program/02.python/01.python基础/02.变量和简单数据类型/2.3字符串.md
+++ b/program/02.python/01.python基础/02.变量和简单数据类型/2.3字符串.md
@@ -1,5 +1,6 @@
 
 
+
 ```py
 "This is a string."
 'This is also a string.'
@@ -12,12 +13,18 @@
 # 2. 大小写
 
 name = "ada lovelace"
-print(name.title())
+print(name.title()) # 首字母大写，其他的小写
 
 name = "Ada Lovelace"
 print(name.upper()) # name 是一个 变量， 代表一个字符串。 字符串默认 有 很多方法，其中 upper() 改变大小，通过  点号 "." 调用 
-print(name.lower()) 
+                    # upper方法，是帮助你在不改变 hello 个字符串本身的同时，快速 输出全大写的字符串
+print(name.lower()) # lower方法，是帮助你在不改变 hello 个字符串本身的同时，快速 输出全小写的字符串
 print(name)         # upper()和lower() 对 name输出有改变 ，name本身没有变化
+
+# 输出
+# ADA LOVELACE
+# ada lovelace
+# Ada Lovelace
 
 # 3. 合并字符串
 
@@ -37,6 +44,8 @@ last_name = "lovelace"
 full_name = first_name + " " + last_name
 message = "Hello, " + full_name.title() + "!"
 print(message)
+
+# ----------------------------------------
 
 # 4. 使用制表符或换行符来添加空白
 print("Python")
@@ -64,9 +73,10 @@ print(favorite_language)            # 永久删除了
 # 7. 剔除字符串开头的空白， 或同时剔除字符串两端的空白
 
 favorite_language = ' python '
+print(favorite_language.len())
 print(favorite_language.rstrip()) # 删除右边的，字符串末尾的空白
 print(favorite_language.lstrip()) # 删除左边的，字符串开头的空白
-print(favorite_language.strip()) # 删除两边的空白
+print(favorite_language.strip()) # 删除两边的空白, 中间的不删除
 ```
 
 
