--- a/program/02.python/01.python基础/18.Django/18.6Restful.md
+++ b/program/02.python/01.python基础/18.Django/18.6Restful.md
@@ -8,7 +8,7 @@ Django - RESTful使用指南
 # 1. 安装配置
 1. 实现restful的模块
 pip install djangorestframework==3.4.6
-2. # 实现restful过滤功能的模块
+2. 实现restful过滤功能的模块
 pip install django-filter
 
 注意：这里使用的是3.4.6版本的 djangorestframework ，不同版本之间的 djangorestframework 有所不同，可以故意打错版本号来查看 djangoframework 来查看有哪些版本。
