--- a/devops/05.docker/03.Docker核心原理解读/3.1Docker背后的内核知识/3.1.1namespace资源隔离.md
+++ b/devops/05.docker/03.Docker核心原理解读/3.1Docker背后的内核知识/3.1.1namespace资源隔离.md
@@ -1,14 +1,46 @@
 
-1. namespace的6项隔离: UTC, IPC, PID, Network, Mount, User
+1. namespace的6项隔离: UTS, IPC, PID, Network, Mount, User
+    |namespace  |系统调用参数    |隔离内容                |
+    |-----------|---------------|-----------------------|
+    |UTS        |CLONE_NEWUTS   |主机名与域名             |
+    |IPC        |CLONE_NEWIPC   |信号量、消息队列和共享内存|
+    |PID        |CLONE_NEWPID   |进程编号                |
+    |Newwork    |CLONE_NEWNET   |网络设备、网络栈、端口等 |
+    |Mount      |CLONE_NEWNS    |挂载点(文件系统)        |
+    |User       |CLONE_NEWUSER  |用户和用户组            |
 2. Linux内核实现namespace的一个主要目的
+    1. 实现轻量级虚拟化`容器`服务
+    2. 在同一个namespace下的进程可以感知彼此的变化，而对外界的进程一无所知
 3. 进行namespace API操作的4种方式: clone(), setns(), unshare(), /proc下的文件
     1. 通过clone()在创建新进程的同时创建namespace
         int clone(int (*child_func)(void *), void *child_stack, int flags, void *arg);
     2. 查看/proc/[pid]/ns文件
+        1. namespace编号，文件描述符fd
+        2. 在Docker中，通过文件描述符定位和加入一个存在的namespace是最基本的方式
+        3. 目录文件使用 --bind 方式挂载： mount --bind 
     3. 通过setns()加入一个已经存在的namespace
+        1. 在进程都结束的情况下，也可以通过挂载的形式把namespace保留下来，保留的目的是为以后进程加入做准备
+        2. docker exec
+        3. 通过setns()系统调用，进程从原先的namespace加入某个已经存在的namespace
+        4. int setns(int fd, int nstype);
+        5. execve()
     4. 通过unshare()在原先进程上进行namespace隔离
+        1. int unshare(int flags);
+        2. 不启动新进程就可以起到隔离的效果，相当于跳出原先的namespace进行操作
+        3. Docker没有使用unshare()系统调用
     5. fork()系统调用
-4. UTC namespace
+        1. fork()不属于namespace的API
+        2. 当程序调用fork()函数时，系统会创建新的进程，为其分配资源，然后把原来进程的所有值都复制到新进程中，只有少量数值与原来的进程值不同，相当于复制了本身
+        3. for()被调用一次，却能够返回两次，父进程与子进程各返回一次
+        4. 通过返回值的不同就可以区分父进程与子进程，有以下3种不同的返回值：
+            1. 在父进程中，fork()返回新创建子进程的进程ID
+            2. 在子进程中，fork()返回0；
+            3. 如果出现错误，fork()返回一个负值
+        5. 使用fork()后，父进程有义务监控子进程的运行状态，并在子进程退出后自己才能正常退出，否则子进程就会成为`孤儿`进程
+4. UTS namespace
+    1. UTS `UNIX Time-sharing System` namespace提供了主机名和域名的隔离
+    2. sethostname("NewNamespace",12);
+    2. int child_pid = clone(child_main, child_stack+STACK_SIZE, CLONE_NEWUTS|SIGCHLD, NULL)
 
 
 
