--- a/program/02.python/01.python基础/03.列表操作/3.2修改、添加和删除元素.md
+++ b/program/02.python/01.python基础/03.列表操作/3.2修改、添加和删除元素.md
@@ -37,9 +37,9 @@ print(motorcycles)
 
 motorcycles = ['honda', 'yamaha', 'suzuki']
 print(motorcycles)
-popped_motorcycle = motorcycles.pop()   # 删除最后最后的元素，并返回被删除的元素
-print(motorcycles)
-print(popped_motorcycle)
+popped_motorcycle = motorcycles.pop()   # 删除最后最后的元素，并返回被删除的元素。
+print(motorcycles)                      # motorcycles列表删除了suzuki，返回['honda', 'yamaha']
+print(popped_motorcycle)                # suzuki保存在popped_motorcycle中，返回suzuki
 
 motorcycles = ['honda', 'yamaha', 'suzuki']
 first_owned = motorcycles.pop(0)        # 删除第一位的元素，并返回被删除的元素
