--- a/program/02.python/01.python基础/23.多线程/4.3线程和Python.md
+++ b/program/02.python/01.python基础/23.多线程/4.3线程和Python.md
@@ -24,7 +24,14 @@
 3. 在Python中使用线程
     1. Python使用兼容POSIX的线程，也就是众所周知的pthread
     2. Python3 import _thread
-
+4. Python的threading模块。thread, threading, Queue
+    1. thread模块提供了基本的线程和锁定支持
+    2. threading模块提供了更高级别、功能更全面的线程管理
+    3. Queue模块，用户可以创建一个队列数据结构，用于在多线程之间进行共享
+5. 避免使用thread模块
+    1. 低级别的thread模块只有一个同步原语，threading模块则有很多
+    2. 当主线程结束时，thread模块所有其他线程也都强制结束，不会发出警告或者进行适当的清理；threading模块能确保重要的子线程在进程退出前结束
+    3. 在Python3中thread模块被重命名为 `_thread`
 
 
 # 参考
@@ -32,3 +39,4 @@
 1. 09#Python核心编程.第3版.2016
 2. Core Python Applications Programming, 3rd Edition, by Wesley J. Chun
     1. https://github.com/TanLingxiao/CorePython
+        1. https://github.com/TanLingxiao/CorePython/blob/master/ch04/mtsleepB.py
