--- a/program/02.python/01.python基础/22.常用库/xlrd/1.python读取Excel实例.md
+++ b/program/02.python/01.python基础/22.常用库/xlrd/1.python读取Excel实例.md
@@ -1,5 +1,3 @@
-python读取Excel实例 - 梦魇一生 - 博客园 https://www.cnblogs.com/ivanpan/p/7300335.html
-
 1.操作步骤：
 （1）安装python官方Excel库-->xlrd
 （2）获取Excel文件位置并读取
@@ -13,6 +11,37 @@ import xlrd
 from datetime import date,datetime
 
 def read_excel():
+    #路径前加 r，读取的文件路径
+    file_path = r'F:/test.xlsx'
+    #文件路径的中文转码
+    file_path = file_path.decode('utf-8')
+    #获取数据
+    data = xlrd.open_workbook(file_path)
+    #获取sheet
+    table = data.sheet_by_name('Sheet1')
+    #获取总行数
+    nrows = table.nrows
+    #获取总列数
+    ncols = table.ncols
+
+    wb = xlrd.open_workbook(filename=file)#打开文件
+    print(wb.sheet_names())#获取所有表格名字
+
+    sheet1 = wb.sheet_by_index(0)#通过索引获取表格
+    sheet2 = wb.sheet_by_name('年级')#通过名字获取表格
+    print(sheet1,sheet2)
+    print(sheet1.name,sheet1.nrows,sheet1.ncols)
+
+    rows = sheet1.row_values(2)#获取行内容
+    cols = sheet1.col_values(3)#获取列内容
+    print(rows)
+    print(cols)
+
+    print(sheet1.cell(1,0).value)#获取表格里的内容，三种方式
+    print(sheet1.cell_value(1,0))
+    print(sheet1.row(1)[0].value)
+
+
     #文件位置
     ExcelFile=xlrd.open_workbook(r'C:\Users\Administrator\Desktop\TestData.xlsx')
     #获取目标EXCEL文件sheet名
@@ -41,9 +70,6 @@ if__name__ =='__main__':
     read_excel()
 ```
  
-
- 
-
 问题1：假如我们修改其中一个值为年份，读不出正确数字，而是数字
 ctype介绍 :
 
@@ -54,3 +80,8 @@ ctype介绍 :
 
 作者：路由心定
 链接：http://www.jianshu.com/p/d32213e611ea
+
+# 参考
+
+1. python读取Excel实例 - 梦魇一生 - 博客园 https://www.cnblogs.com/ivanpan/p/7300335.html
+2. Python读写Excel表格，就是这么简单粗暴又好用 - CSDN资讯 - CSDN博客 https://blog.csdn.net/csdnnews/article/details/80878945
