--- a/program/02.python/01.python基础/22.常用库/string/6.27个python字符串操作方法集合.md
+++ b/program/02.python/01.python基础/22.常用库/string/6.27个python字符串操作方法集合.md
@@ -119,7 +119,7 @@ return ''.join(d.get(c, c) for c in s)
 s = "John 'Johny' Doe (a.k.a. \"Super Joe\")\\\0"
 print s
 print addslashes(s)
-19、只显示字母与数字
+# 19、只显示字母与数字
 def OnlyCharNum(s,oth=''):
 s2 = s.lower();
 fomart = 'abcdefghijklmnopqrstuvwxyz0123456789'
@@ -129,7 +129,7 @@ s = s.replace(c,'');
 return s;
 
 print(OnlyStr("a000 aa-b"))
-20、截取字符串
+# 20. 截取字符串
 str = '0123456789′
 print str[0:3] #截取第一位到第三位的字符
 print str[:] #截取字符串的全部字符
@@ -141,13 +141,13 @@ print str[::-1] #创造一个与原字符串顺序相反的字符串
 print str[-3:-1] #截取倒数第三位与倒数第一位之前的字符
 print str[-3:] #截取倒数第三位到结尾
 print str[:-5:-3] #逆序截取，具体啥意思没搞明白？
-21、字符串在输出时的对齐 
+# 21、字符串在输出时的对齐 
 S.ljust(width,[fillchar]) 
 #输出width个字符，S左对齐，不足部分用fillchar填充，默认的为空格。 
 S.rjust(width,[fillchar]) #右对齐 
 S.center(width, [fillchar]) #中间对齐 
 S.zfill(width) #把S变成width长，并在右对齐，不足部分用0补足
-22、字符串中的搜索和替换 
+# 22、字符串中的搜索和替换 
 S.find(substr, [start, [end]]) 
 #返回S中出现substr的第一个字母的标号，如果S中没有substr则返回-1。start和end作用就相当于在S[start:end]中搜索 
 S.index(substr, [start, [end]]) 
@@ -164,7 +164,8 @@ S.lstrip([chars])
 S.rstrip([chars]) 
 S.expandtabs([tabsize]) 
 #把S中的tab字符替换没空格，每个tab替换为tabsize个空格，默认是8个
-23、字符串的分割和组合 
+
+# 23、字符串的分割和组合 
 S.split([sep, [maxsplit]]) 
 #以sep为分隔符，把S分成一个list。maxsplit表示分割的次数。默认的分割符为空白字符 
 S.rsplit([sep, [maxsplit]]) 
