--- a/program/02.python/03.机器学习/06.支持向量机SVM/01.标准化和归一化.md
+++ b/program/02.python/03.机器学习/06.支持向量机SVM/01.标准化和归一化.md
@@ -1,5 +1,47 @@
 
+# 1. 数据预处理之数据无量纲化(标准化/归一化) https://blog.csdn.net/OnTheWayGoGoing/article/details/79871559
 
+## 1. min-max归一化
+
+```py
+import numpy as np
+from sklearn.preprocessing import MinMaxScaler
+x = np.array([[1,-1,2],[2,0,0],[0,1,-1]])
+x1 = MinMaxScaler().fit_transform(x)
+print(x1)
+
+```
+
+
+## 2. z-score标准化
+
+z-score标准化方法试图将原始数据集标准化成均值为0，方差为1且接近于标准正态分布的数据集
+
+```py
+import numpy as np
+from sklearn.preprocessing import StandardScaler
+x = np.array([[1,2,3],[4,5,6],[1,2,1]])
+x1 = StandardScaler().fit_transform(x)
+# 可以发现，x1的每一列加起来都是0，方差是1左右
+# >>> x1
+# array([[-0.70710678, -0.70710678, -0.16222142],
+#        [ 1.41421356,  1.41421356,  1.29777137],
+#        [-0.70710678, -0.70710678, -1.13554995]])
+
+# 标准化数据，保证每个维度的特征数据方差为1，均值为0，使得预测结果不会被某些维度过大的特征值而主导
+# 在训练集上调用fit_transform()，其实找到了均值μ和方差σ^2，即找到了转换规则，把这个规则利用在训练集上
+# 同样，可以直接将其运用到测试集上（甚至交叉验证集），所以在测试集只需要标准化数据而不需要再次拟合数据
+ss = StandardScaler()
+x = np.array([[1,2,3],[4,5,6],[1,2,1]])
+# fit_transform()先拟合数据，再标准化
+X_train = ss.fit_transform(X_train)
+# transform()数据标准化
+X_test = ss.transform(X_test)
+```
+
+### 2.1 数据拟合
+
+数据拟合又称曲线拟合，俗称拉曲线，是一种把现有数据透过数学方法来代入一条数式的表示方式。科学和工程问题可以通过诸如采样、实验等方法获得若干离散的数据，根据这些数据，我们往往希望得到一个连续的函数（也就是曲线）或者更加密集的离散方程与已知数据相吻合，这过程就叫做拟合(fitting)。
 
 
 # 参考
@@ -9,3 +51,6 @@
 4. 机器学习——标准化/归一化的目的和作用 https://blog.csdn.net/zenghaitao0128/article/details/78361038
 5. 数据预处理之数据无量纲化(标准化/归一化) https://blog.csdn.net/OnTheWayGoGoing/article/details/79871559
 6. 方差、协方差、标准差、均方差、均方根值、均方误差、均方根误差对比分析 https://blog.csdn.net/cqfdcw/article/details/78173839
+7. Python: sklearn库中数据预处理函数fit_transform()和transform()的区别 - 小太阳~ - CSDN博客 https://blog.csdn.net/quiet_girl/article/details/72517053
+8. 机器学习-回归模型-欠拟合和过拟合 - 藏经阁 | 玄苦 - CSDN博客 https://blog.csdn.net/chenguolinblog/article/details/52404765
+9. 数据拟合 - 学习python - CSDN博客 https://blog.csdn.net/weixin_42575020/article/details/82949116
