--- a/program/02.python/03.机器学习/01.机器学习基础/01.机器学习的主要任务.md
+++ b/program/02.python/03.机器学习/01.机器学习基础/01.机器学习的主要任务.md
@@ -26,10 +26,10 @@
     1. 线性代数的本质
         3. 矩阵与线性变换 https://www.bilibili.com/video/av6043439
         4. 矩阵乘法与线性变换复合 https://www.bilibili.com/video/av6128021
-        5. 05 行列式 https://www.bilibili.com/video/av6179111
+        5. 行列式 https://www.bilibili.com/video/av6179111
         8. 08第一部分 - 叉积的标准介绍 https://www.bilibili.com/video/av6341515
-        9. 09 - 基变换 https://www.bilibili.com/video/av6500834
-        10. 10 - 特征向量与特征值 https://www.bilibili.com/video/av6540378
+        9. 基变换 https://www.bilibili.com/video/av6500834
+        10. 特征向量与特征值 https://www.bilibili.com/video/av6540378
     
 6. 可汗学院公开课：线性代数_全143集_网易公开课 http://open.163.com/special/Khan/linearalgebra.html
     1. 特征向量和特征值的引入 http://open.163.com/newview/movie/free?pid=M82ICR1D9&mid=M83J8L742
